# pyAFL

./: .gitignore  2025_lifeline_data.csv  2025_lifeline_data.xlsx  2025_lifeline_data_multi_lifelines.csv  2025_lifeline_data_multi_lifelines.xlsx  README.md  analyse_lifeline_costs.py  analyse_lifeline_mvp.py  analyse_lifeline_mvp_thur_fri_only.py  analyse_lifeline_mvp_with_constraints.py  analyse_lifeline_wheel_spin.py  forecast_cost_increases.py  forecast_costs_first_week.py  get_SGM_data.py  get_fees.py  lifeline_cost_with_leg_constraints.csv  lifeline_cost_with_leg_constraints.xlsx  main.py  pyproject.toml  results.csv  scrape_match_data.py  scrape_player_info.py  scrape_player_match_data.py
data/dim-team/: team_aliases.csv  teams.csv
src/pyAFL/: __init__.py
src/pyAFL/players/: models.py
src/pyAFL/session/: session.py
src/pyAFL/teams/: models.py
src/pyAFL/utils/: leg_utils.py  lifeline_utils.py  match_utils.py  name_utils.py  player_season_utils.py  snowflake_utils.py
summary_results/: band_summaries.xlsx  high_bands_summary.csv  low_bands_summary.csv  wheel_spin.csv  wheel_spin_summary.xlsx
